# Py4ti2

./: .gitignore  4ti2mcnv.cc  4ti2mcnv.h  MANIFEST.in  Makefile  Py4ti2.cc  Py4ti2.h  Py4ti2gmp.py  Py4ti2int32.py  Py4ti2int64.py  README.md  datatran.cc  datatran.h  grobstuf.cc  groestuf.cc  groestuf.h  pyproject.toml  qsolstuf.cc  qsolstuf.h  setup.cfg  setup.py  vecarcnv.cc  vecarcnv.h  zsolstuf.cc  zsolstuf.h
.github/workflows/: dist.yml
